<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/forgot_password_dialog_background"
    android:padding="10dp" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/forgot_password_dialog"
        android:textColor="#111"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_title"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/divider_line" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password_enter_number"
        android:textColor="#111"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/forgot_password_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_text"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:digits="0123456789"
        android:hint="@string/forgot_password_email_id"

        android:maxLength="10"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_mobile"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/positive_button_background"
            android:text="@string/cancel"
            android:textColor="@color/button_text_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_send"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/positive_button_background"
            android:text="@string/send_but"
            android:textColor="@color/button_text_color"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>